[project]
name = "atmob-pillow"
version = "0.1.0"
description = "MVP image/audio/midi batch tool (PySide6 + Pillow + ffmpeg + music21)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyside6>=6.6",
  "pillow>=10.0",
  "music21>=9.0",
]

[project.scripts]
image-resizer = "atmob_pillow.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atmob_pillow"]
